fix CSS alignment of tree checkboxes

--- a/frontend/stylesheets/antd_overwrites.less
+++ b/frontend/stylesheets/antd_overwrites.less
@@ -282,3 +282,9 @@ label.ant-checkbox-wrapper {
 .ant-radio-button-wrapper-disabled:first-child{
   opacity: 0.5;
 }
+
+// We use a non-default font size (20px instead of 24) in the tree list for skeletons 
+// That offsets all checkboxes slightly
+#tree-list .ant-tree-list .ant-tree-checkbox {
+  margin-top: 2px; // default is 4px
+}
